--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   firebase_auth: ^4.4.2
   cloud_firestore: ^4.5.2
   firebase_storage: ^11.1.1
+  http: ^0.13.5
 
 dev_dependencies:
   flutter_test:
